fix responsive css and layout issues

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,20 +2,10 @@
 
 @import "tailwindcss";
 
-* {
-  font-family: "Saira", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+    font-family: "Saira", sans-serif;
 }
 
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-}
-
-::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar{
+  display:none;
 }
